# mpi_avanzado

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md
scripts/: benchmark.sh  build.sh  run_tests.sh
src/: analysis.cpp  benchmark.cpp  main.cpp  test.cpp
